# CAGE

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  help.sh  pyproject.toml
.github/workflows/: docs.yml  lint.yml
cage/: __init__.py
cage/agents/: __init__.py
cage/agents/base/: __init__.py  definition.py  instance.py  openviking.py  output.py  registry.py  resources.py
cage/agents/claude_code/: __init__.py  agent.py
cage/agents/codex/: __init__.py  agent.py  output.py
cage/agents/custom/: __init__.py  agent.py  manifest.py
cage/agents/gemini_cli/: __init__.py  agent.py
cage/agents/hermes/: __init__.py  agent.py
cage/agents/kimi_code/: __init__.py  agent.py
cage/agents/qwen_code/: __init__.py  (+1 more)
cage/artifacts/: __init__.py  canonical_marks.py  dashboard.py  jsonio.py  live_success.py  reader.py  record_snapshots.py  records.py  resources.py  run_storage.py  trial_session.py  writer.py
cage/benchmarks/: __init__.py  base.py  loader.py  prompt_contract.py  registry.py
cage/cli/: __init__.py  __main__.py  ids.py  main.py  paths.py
cage/config/: __init__.py  experiment.py  repo.py  sections.py
cage/contracts/: __init__.py  coerce.py  duration.py  env.py  exceptions.py  execution.py  logging.py  reporter.py  runtime_state.py  sample_keys.py  scoring.py  style.py  telemetry.py  trial_status.py
cage/experiment/: __init__.py
cage/gc/: __init__.py  plan.py  runner.py  summary.py
cage/models/: __init__.py  endpoint.py  registry.py
cage/proxy/: __init__.py  anthropic_openai_translate.py  conversations.py  host.py  monitor.py  sidecar.py  trajectory.py  usage.py
cage/rl/: __init__.py  reward_sink.py
cage/sandbox/: __init__.py  admission.py  containers.py  exec.py  naming.py  shell.py  state.py
cage/scoring/: __init__.py  context.py  lifecycle.py  scorer.py
cage/web/: __init__.py  app.py  cache.py  delta.py  inspect_board.py  inspect_server.py  warmer.py
config/: cage.yml  models.example.yml
docker/: README.md  build_cairn.sh  build_qitos.sh  cairn.Dockerfile  cairn_worker.Dockerfile  claude_code.Dockerfile  claude_code_cyberdebug.Dockerfile  claude_code_pentestenv.Dockerfile  codex.Dockerfile  codex_pentestenv.Dockerfile  custom_langgraph.Dockerfile  gemini_cli_pentestenv.Dockerfile  hermes_openviking.Dockerfile  hermes_pentestenv.Dockerfile  kimi_code_pentestenv.Dockerfile  qitos.Dockerfile  qwen_code_pentestenv.Dockerfile
docker/cairn/: build.sh
docker/claude_code/: Dockerfile  cyberdebug.Dockerfile  openviking.Dockerfile  pentestenv.Dockerfile
docker/codex/: Dockerfile  pentestenv.Dockerfile
docker/gemini_cli/: pentestenv.Dockerfile
docker/kimi_code/: pentestenv.Dockerfile
docker/qitos/: Dockerfile  build.sh
docker/qwen_code/: pentestenv.Dockerfile
docs/: adding-a-new-agent-CN.md  adding-a-new-agent.md  agent-cage-managed-CN.md  agent-cage-managed.md  agent-serve-mode-CN.md  agent-serve-mode.md  benchmark-serve-mode-CN.md  benchmark-serve-mode.md  cage-gc.md  cli-design.md  datasets.md  deployment.md  how-a-run-works.md  index.md  langgraph-langchain-agent.md  models.md  package-lock.json  package.json  repo-architecture.md  serve-external-audience.md  targets-check.md
docs/.vitepress/: config.mts
docs/developing-cage/: README.md
docs/getting-started/: README.md
docs/operations/: README.md
docs/reference/: classes.md  cli.md  project-yml.md
docs/running-experiments/: README.md
docs/writing-benchmarks/: README.md
examples/agent_pentest_bench/: README.md  benchmark.py  default_post_exploit.yml  default_web_exploit.yml
examples/autopenbench/: README.md  bench_hub_adapter.py  benchmark.py  default_autopenbench.yml
examples/build_target/: benchmark.py  default_build_target.yml
examples/cvebench/: README.md  benchmark.py  default_cvebench.yml
examples/cybergym/: README.md  benchmark.py  default_arvo.yml  default_cybergym.yml
examples/hackworld/: README.md  benchmark.py  default_hackworld.yml
examples/nyuctfbench/: README.md  benchmark.py  default_nyu_ctf.yml
examples/strongreject/: README.md  benchmark.py  default_strongreject.yml  judge.py
scripts/: backfill_marker_stages.py  build_claude_code_trace_cyber_dataset.py  export_trajectory_events.py  reclassify_meta.py  refresh_claude_oauth.py  refresh_claude_oauth_loop.sh  refresh_codex_oauth.py  rl_mock_gateway.py  rl_smoke.py
tests/: test_admission.py  test_agent_pentest_bench_dashboard.py  test_agent_pentest_bench_examples.py  test_agent_pentest_bench_judge_defaults.py  test_agent_pentest_bench_prompt_levels.py  test_agent_pentest_bench_scorer.py  test_autopenbench_example.py  test_benchmark_cli.py  test_build_claude_code_trace_cyber_dataset.py  test_cairn_agent.py  test_cairn_snapshot.py  test_challenge_json_adapter.py  test_check_server.py  test_check_service.py  test_cli_ids.py  test_codex_output.py  test_container.py  test_conversations.py  test_core.py  test_custom_agent.py  test_cvebench_env_sanitizer.py  test_cvebench_example.py  test_cybergym_binary_mode.py  test_cybergym_image_cache.py  test_dashboard.py  test_duration.py  test_e2e_docker.py  test_e2e_proxy_glm.py  test_experiment_artifacts.py  test_experiment_contracts.py  test_export_trajectory_events.py  test_file_architecture.py  test_hackworld_example.py  test_inspect_board.py  test_kimi_code.py  test_launch_workflow.py  test_layer_boundary.py  test_live_monitor.py  test_live_success.py  test_liveness_gc.py  (+52 more)
(+97 files in other folders)
